<?xml version="1.0"?>
<package format="2">
  <name>autonomous_description</name>
  <version>0.0.0</version>
  <description>The autonomous_description package</description>
  <maintainer email="emirhan@todo.todo">emirhan</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  
  

  <export>

  </export>
</package>
